# perf_walkdir

pure_dart/: pubspec.yaml
rust_and_dart/: .packages  pubspec.yaml
rust_and_dart/.dart_tool/: package_config.json
rust_and_dart/rust/: Cargo.toml
rust_and_dart/rust/src/: lib.rs  main.rs
