[package]
name = "worker"
version = "0.1.0"
authors = ["lluz55 <lucasluz55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
libc = "0.2.93"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
jwalk = "0.6.0"

[lib]
name = "worker"
crate-type = ["staticlib", "cdylib"]